[ALLI-6162] Fix details element border style within a truncate div (#1602)

--- a/themes/finna2/less/finna/myresearch.less
+++ b/themes/finna2/less/finna/myresearch.less
@@ -226,6 +226,12 @@
         margin-bottom: 10px;
       }
     }
+    .truncate-field.truncate-done {
+      details {
+        margin-left: 1px;
+        margin-right: 1px;
+      }
+    }
 }
 // Custom styles for user account functions
 .template-dir-myresearch, .template-dir-search.template-name-history, .template-dir-librarycards {
